# fax_server

./: .env.example  .flake8  .gitignore  README.md  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  spike.md  story.md  support.md  task.md
.husky/: post-checkout  pre-commit
alembic/: env.py
alembic/versions/: d4867f3a4c0a_first_revision.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
scripts/: post-checkout.sh
src/: backend_pre_start.py  configure_aws.py  initial_data.py  main.py  tests_pre_start.py  utils.py  worker.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
src/core/: config.py  security.py
src/crud/: __init__.py  base.py  crud_item.py  crud_user.py
src/db/: __init__.py  base.py  init_db.py  session.py
src/models/: __init__.py  base.py  item.py  user.py
src/schemas/: __init__.py  json_msg.py  user.py
src/tests/: conftest.py
src/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
src/tests/crud/: test_item.py  test_user.py
src/tests/utils/: item.py  user.py  utils.py
