[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nadeem <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.28.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^1.9.1"
gunicorn = "^20.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.20.0"
boto3 = "^1.24.31"
emails = "^0.6"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
autoflake = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']

